# backtest

./: .coverage  .gitignore  CLAUDE.md  PHASE1_COMPLETION_SUMMARY.md  README.md  plan.md  pyproject.toml
config/: logging.yaml  settings.yaml
phases/: phase1-foundation.md  phase2-data-layer.md  phase3-options-pricing.md  phase4-strategy-framework.md  phase5-backtesting-engine.md  phase6-analytics-performance.md  phase7-visualization-ui.md
src/core/: contracts.py  exceptions.py  portfolio.py  position.py
src/data/: data_manager.py  schemas.py
src/utils/: config.py  logger.py
tests/: conftest.py
tests/integration/: test_database_integration.py
tests/unit/: test_contracts.py  test_data_manager.py  test_portfolio.py  test_position.py
